--- a/app/assets/stylesheets/modules/_buttons.css.scss
+++ b/app/assets/stylesheets/modules/_buttons.css.scss
@@ -52,7 +52,7 @@ a {
   transition: ease-in .2s;
   padding: 5px 20px;
   position: relative;
-  margin-bottom: 5px;
+  margin-bottom: 0;
 
   &:hover {
     background-color: darken($darkOrange, 2);
