--- a/app/assets/javascripts/templates/anime/_trending_reviews.hbs
+++ b/app/assets/javascripts/templates/anime/_trending_reviews.hbs
@@ -1,4 +1,4 @@
-{{#each trendingReviews}}
+{{#each trendingReviews itemController="review"}}
   {{partial "media/review_summary"}}
 {{else}}
   <div class="trending-review-empty">
