--- a/app/assets/javascripts/templates/reviews/index.hbs
+++ b/app/assets/javascripts/templates/reviews/index.hbs
@@ -11,7 +11,7 @@
 <div class="series-reviews col-sm-12">
 
 <div class="review-listing">
-  {{#each}}
+  {{#each itemController="review"}}
     {{partial "media/review_summary"}}
   {{else}}
     {{#unless canLoadMore}}
