add started/finished_airing_date editing support

--- a/app/assets/javascripts/templates/modals/edit-anime.hbs
+++ b/app/assets/javascripts/templates/modals/edit-anime.hbs
@@ -59,6 +59,16 @@
             {{input type="number" value=coverImageTopOffset class="form-control"}}
           </div>
         </div>
+        <div class="form-row">
+          <div class="col-sm-3">
+            <label>Started Airing</label>
+            {{input value=startedAiring class="form-control" placeholder="YYYY-MM-DD"}}
+          </div>
+          <div class="col-sm-3">
+            <label>Finished Airing</label>
+            {{input value=finishedAiring class="form-control" placeholder="YYYY-MM-DD"}}
+          </div>
+        </div>
 
         {{! Comment area }}
         <div class="col-sm-12">
