--- a/app/assets/javascripts/templates/modals/edit-anime.hbs
+++ b/app/assets/javascripts/templates/modals/edit-anime.hbs
@@ -62,11 +62,11 @@
         <div class="form-row">
           <div class="col-sm-3">
             <label>Started Airing</label>
-            {{input value=startedAiring class="form-control" placeholder="YYYY-MM-DD"}}
+            {{input value=startingDate class="form-control" placeholder="YYYY-MM-DD"}}
           </div>
           <div class="col-sm-3">
             <label>Finished Airing</label>
-            {{input value=finishedAiring class="form-control" placeholder="YYYY-MM-DD"}}
+            {{input value=finishedDate class="form-control" placeholder="YYYY-MM-DD"}}
           </div>
         </div>
 
