Get ember-cli-rails working.

--- a/app/views/layouts/redesign.html.haml
+++ b/app/views/layouts/redesign.html.haml
@@ -76,6 +76,4 @@
       :javascript
         window.analytics=window.analytics||[],window.analytics.methods=["identify","group","track","page","pageview","alias","ready","on","once","off","trackLink","trackForm","trackClick","trackSubmit"],window.analytics.factory=function(t){return function(){var a=Array.prototype.slice.call(arguments);return a.unshift(t),window.analytics.push(a),window.analytics}};for(var i=0;i<window.analytics.methods.length;i++){var key=window.analytics.methods[i];window.analytics[key]=window.analytics.factory(key)}
 
-
-    = javascript_include_tag "vendor"
-    = javascript_include_tag "application"
+    = include_ember_script_tags :frontend
