convert anime to ember-cli.

--- a/app/frontend/app/templates/anime/_franchise.hbs
+++ b/app/frontend/app/templates/anime/_franchise.hbs
@@ -1,5 +1,5 @@
 {{#if franchises.isFulfilled}}
-  {{#with franchises controller='animeFranchises'}}
+  {{#with franchises controller='franchises'}}
     {{#each franchiseAnime}}
       <div class="franchise-show">
         <div class="franchise-poster">
