convert search to ember-cli.

--- a/app/frontend/app/templates/header/search.hbs
+++ b/app/frontend/app/templates/header/search.hbs
@@ -1,4 +1,3 @@
 <li class="header-item searchbar">
-  {{!--FIXME--}}
-  {{!--instant-search action="submitSearch" focusLost="hideSearchfield"--}}
+  {{instant-search action="submitSearch" focusLost="hideSearchfield"}}
 </li>
