Fix template errors courtesy of HTMLBars.

--- a/app/frontend/app/templates/anime/_featured_quotes.hbs
+++ b/app/frontend/app/templates/anime/_featured_quotes.hbs
@@ -6,10 +6,11 @@
       <span class="like-button">
         <a {{action "toggleQuoteFavorite" this}}>
           {{#if isFavorite}}
-            <i class="fa fa-heart active"></i> Liked!</i></a>
+            <i class="fa fa-heart active"></i> Liked!
           {{else}}
-            <i class="fa fa-heart"></i> Like?</i></a>
+            <i class="fa fa-heart"></i> Like?
           {{/if}}
+        </a>
       </span>
       <span class="quote-divider"></span>
       <span class="total-likes">
