--- a/app/frontend/app/templates/manga/index.hbs
+++ b/app/frontend/app/templates/manga/index.hbs
@@ -5,7 +5,7 @@
       {{#bootstrap-tooltip title=englishTitle placement="right"}}
         <i class="fa fa-question-circle"></i>
       {{/bootstrap-tooltip}}
-    <small>
+    </small>
   {{/if}}
 </h2>
 
