--- a/app/frontend/app/templates/onboarding/library.hbs
+++ b/app/frontend/app/templates/onboarding/library.hbs
@@ -7,7 +7,7 @@
     {{#link-to 'onboarding.finish' class='btn btn-primary continue-button categories'}}Continue{{/link-to}}
   {{else}}
     <a class='btn btn-primary continue-button no-continue'>
-      Rate <strong>{{remainingRatings}} more</strong> to continue</strong>
+      Rate <strong>{{remainingRatings}} more</strong> to continue
     </a>
   {{/if}}
   <div class="col-sm-12">
