--- a/app/frontend/app/templates/anime/quotes.hbs
+++ b/app/frontend/app/templates/anime/quotes.hbs
@@ -39,7 +39,7 @@
             <div class="col-md-8 col-xs-8">
               {{textarea value=quoteText class="form-control"}}
               {{#unless textCorrectLength}}
-                <small class="text-danger">Quote must be atleast 10 characters.</p>
+                <small class="text-danger">Quote must be atleast 10 characters.</small>
               {{/unless}}
             </div>
           </div>
@@ -50,7 +50,7 @@
             <div class="col-md-8 col-xs-8">
               {{input type="text" value=quoteChar class="form-control"}}
               {{#unless charCorrectLength}}
-                <small class="text-danger">Character name must be atleast 3 characters.</p>
+                <small class="text-danger">Character name must be atleast 3 characters.</small>
               {{/unless}}
             </div>
           </div>
