--- a/app/frontend/app/templates/user.hbs
+++ b/app/frontend/app/templates/user.hbs
@@ -7,13 +7,14 @@
         </label>
         <div class="container">
           <p>
-            Cover images expand and shrink based on your device's width. <br>On smaller devices your cover will be cut off equally on both sides.
+            Cover images expand and shrink based on your device{ FIXME }s width.
+            <br>
+            On smaller devices your cover will be cut off equally on both sides.
           </p>
         </div>
-        {{view "fileUpload" action="coverSelected"
-                             id="cover-image"}}
-      {{/if}}
-    </div>
+        {{view "file-upload" action="coverSelected" id="cover-image"}}
+      </div>
+    {{/if}}
     <div class="dark-overlay"></div>
   </div>
 </div>
@@ -36,7 +37,7 @@
         <div class="col-sm-12 col-md-10 no-padding account-wrapper">
           <div class="account-info">
             <div class="bio-wrapper">
-              <h2 class="username"> {{username}}</h1>
+              <h2 class="username">{{username}}</h2>
               {{#if showEditMenu}}
                 {{{textarea class="edit-bio" rows="2" maxlength="140" placeholder="Briefly tell us about yourself..." value=truncatedBio}}}
               {{else}}
@@ -74,6 +75,7 @@
     </div>
   </div>
 </div>
+
 <div class="profile-navigation">
   <div class="container">
     <div class="row">
@@ -100,6 +102,7 @@
     </div>
   </div>
 </div>
+
 <div class="container">
   <div class="feed-head-advert">
     {{ad-unit adId="1293413" adClass="257f81e798bd68dd81e60f42838f361f"}}
