Fix file-upload view lookup.

--- a/app/frontend/app/templates/user.hbs
+++ b/app/frontend/app/templates/user.hbs
@@ -30,7 +30,7 @@
               <label for="avatar-image">
                 <i class="fa fa-camera"></i> Edit Avatar
               </label>
-              {{view "fileUpload" action="avatarSelected" id="avatar-image"}}
+              {{view "file-upload" action="avatarSelected" id="avatar-image"}}
             </div>
           </div>
         </div>
