--- a/app/frontend/app/templates/user.hbs
+++ b/app/frontend/app/templates/user.hbs
@@ -7,7 +7,7 @@
         </label>
         <div class="container">
           <p>
-            Cover images expand and shrink based on your device{ FIXME }s width.
+            Cover images expand and shrink based on your device's width.
             <br>
             On smaller devices your cover will be cut off equally on both sides.
           </p>
