--- a/app/frontend/app/templates/story/media_story.hbs
+++ b/app/frontend/app/templates/story/media_story.hbs
@@ -18,7 +18,7 @@
             <div class="col-md-11">
               <div class="user-image hidden-sm hidden-xs">
                 {{#link-to 'user' user}}
-                  {{avatar user "thumb_small"}}
+                  {{unbound avatar user "thumb_small"}}
                 {{/link-to}}
               </div>
               <div class="event-info col-sm-12 col-md-11">
