Remove substory controller for faster rendering.

--- a/app/frontend/app/templates/story/comment.hbs
+++ b/app/frontend/app/templates/story/comment.hbs
@@ -85,7 +85,7 @@
       {{/if}}
     </div>
   {{/if}}
-  {{#each reversedDisplaySubstories itemController="substory"}}
+  {{#each reversedDisplaySubstories}}
     <div {{bind-attr class=":reply isNew"}}>
       <div class="user-avatar">
         {{#link-to 'user' user}}
