fix: hide review nag when user has written one

--- a/app/frontend/app/templates/anime/index.hbs
+++ b/app/frontend/app/templates/anime/index.hbs
@@ -72,7 +72,7 @@
 
 
 <div class="container">
-  {{#if libraryEntry.isComplete}}
+  {{#if showReviewNag}}
     <!-- Review Nag -->
     <div class="review-nag">
       <span class="nag-text">
