fix cover image upload

--- a/app/frontend/app/templates/modals/crop-cover.hbs
+++ b/app/frontend/app/templates/modals/crop-cover.hbs
@@ -6,7 +6,7 @@
     <img {{bind-attr src=originalImage}} id="preview" />
   </div>
   <div class="modal-footer">
-    <button class="btn.btn-primary" {{action "upload"}}> Upload</button>
+    <button class="btn btn-primary" {{action "upload"}}> Upload</button>
   </div>
 {{/bootstrap-modal}}
 
