--- a/app/frontend/app/templates/kotodama.hbs
+++ b/app/frontend/app/templates/kotodama.hbs
@@ -45,7 +45,7 @@
       </div>
 
       <div class="panel panel-default">
-        <div class="panel-heading">Deploy Hummingbird</div>
+        <div class="panel-heading">Deploy Hummingbird [Current: {{sha_hash}}]</div>
         <div class="panel-body">
           <button class="form-control btn status-button" {{action 'deploy'}}>Good Luck!</button>
           {{#if hasDeployed}}
