static payment form on pro page.

--- a/app/assets/stylesheets/modules/_variables.css.scss
+++ b/app/assets/stylesheets/modules/_variables.css.scss
@@ -50,7 +50,7 @@ $darkDivider: #e1e1e1;
 */
 
 $headerFontFamily: "klavika", Helvetica, Arial, sans-serif;
-$bodyFontFamily: "Helvetica Neue", Helvetica, Arial, "Lucida Grande", sans-serif;
+$bodyFontFamily: 'Open Sans', sans-serif;
 $linkColor: $orange;
 $linkHoverColor: $darkOrange;
 
