--- a/app/frontend/app/templates/pro.hbs
+++ b/app/frontend/app/templates/pro.hbs
@@ -1,1 +1,74 @@
-<p>Hello, World!</p>
+<div class="pro-card">
+  <div class="panel panel-default">
+    <div class="panel-body pro-panel">
+      <h1>Let's take our relationship to the next level.</h1>
+      <p><strong>Hummingbird PRO</strong> is our premium membership. It upgrades your account with some neat extras, you’ll receive special benefits from our PRO partners and most importantly you’ll be directly supporting us to continue making magic happen. We’re talking about love, baby.</p>
+
+      <div class="purchase-block">
+        <div class="btn-group" role="group" aria-label="...">
+          <button type="button" class="btn btn-default active">Subscription</button>
+          <button type="button" class="btn btn-default">One-time / Gift</button>
+        </div>
+
+        <!-- Subscription option -->
+        <div class="payment-wrapper">
+          <p>What type of subscription would you like?</p>
+          <ul>
+            <li>
+              <input name="period" type="radio" id="period_monthly" value="monthly" class="nomargin">
+              <label for="period_monthly">monthly - $4.99</label>
+            </li>
+            <li>
+              <input name="period" type="radio" id="period_yearly" value="yearly" class="nomargin" checked="checked">
+              <label for="period_yearly">yearly - $39.99 (~$3.50/month)</label>
+            </li>
+          </ul>
+          <button class="pro-button" type="button">Purchase PRO</button>
+        </div>
+        <!-- End Subscription option -->
+
+        <!-- One-time option -->
+        <div class="payment-wrapper">
+          <p>How many months?</p>
+          <select id="months" name="months" class="pro-dropdown">
+            <option value="1">1 month: $3.99</option>
+            <option value="3">3 months: $11.97</option>
+            <option value="12" selected="">12 months   (special price!): $29.99</option>
+            <option value="24">24 months   (special price!): $59.98</option>
+            <option value="36">36 months   (special price!): $89.97</option>
+          </select>
+          <ul>
+            <li>
+              <input type="radio" id="notgift" name="gift" value="0">
+              <label for="notgift">purchase for myself</label>
+            </li>
+            <li>
+              <input type="radio" id="gift" name="gift" value="1" checked="">
+              <label for="gift">purchase as a gift</label>
+              <div class="gift-details">
+                <label>
+                  who should receive this gold?
+                  <input id="recipient" type="text" name="recipient" value="" placeholder="Enter a username..." size="13" maxlength="20" class="inline">
+                </label>
+                <ul class="indent">
+                  <li>
+                    <label>
+                      <input type="checkbox" id="message" name="message" value="message">
+                      include a message?
+                    </label>
+                  </li>
+                  <li>
+                    <textarea rows="3" name="giftmessage" id="giftmessage" placeholder="Go ahead, say something clever..." class="giftmessage"></textarea>
+                  </li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+          <button class="pro-button">Purchase PRO</button>
+        </div>
+        <!-- End One-time option -->
+
+
+      </div>
+    </div>
+</div>
