--- a/app/assets/stylesheets/modules/_typography.css.scss
+++ b/app/assets/stylesheets/modules/_typography.css.scss
@@ -1,3 +1,5 @@
+@import url(http://fonts.googleapis.com/css?family=Open+Sans:400,600);
+
 body {
   font-family: $bodyFontFamily;
   font-weight: 300;
