Pro partners section

--- a/app/frontend/app/templates/pro.hbs
+++ b/app/frontend/app/templates/pro.hbs
@@ -28,7 +28,7 @@
         <!-- End Subscription option -->
 
         <!-- One-time option -->
-        <div class="payment-wrapper">
+        {{!-- <div class="payment-wrapper">
           <p>How many months?</p>
           <select id="months" name="months" class="pro-dropdown">
             <option value="1">1 month: $3.99</option>
@@ -65,10 +65,36 @@
             </li>
           </ul>
           <button class="pro-button">Purchase PRO</button>
-        </div>
+        </div> --}}
         <!-- End One-time option -->
 
 
       </div>
     </div>
+</div>
+
+<div class="pro-card">
+  <div class="panel panel-default">
+    <div class="panel-body pro-panel">
+      <h1>What you get.</h1>
+      <ul class="perks">
+        <li><span>Ad-free browsing experience</span></li>
+        <li><span>Exclusive PRO badge beside your name</span></li>
+        <li><span>Early Access to New Features</span></li>
+        <li><span>Special benefits from our PRO partners</span></li>
+      </ul>
+      <ul class="pro-partners">
+        <h1>From our PRO partners.</h1>
+        <li>
+          <div class="partner-logo">
+            <img src="http://media.animevice.com/uploads/0/4/4994-trsi_large.png">
+          </div>
+          <div class="partner-deal">
+            <h4>One Year of Rightstuf 'Got Anime' Membership</h4>
+            <p>Receive special offers and discounts on purchases, including an additional 10% off their already low prices!</p>
+          </div>
+        </li>
+      </ul>
+    </div>
+  </div>
 </div>
