--- a/app/assets/stylesheets/partials/pro.css.scss
+++ b/app/assets/stylesheets/partials/pro.css.scss
@@ -1,9 +1,6 @@
 .pro-card {
-  @extend .animated;
-  @extend .fadeInUp;
-  animation-delay: .5s;
   width: 800px;
-  margin: 100px auto 30px auto;
+  margin: 50px auto 30px auto;
   @media (max-width: 800px) {
     width: 100%;
     padding: 0 10px;
@@ -75,6 +72,61 @@
       border: 1px solid #ddd;
       padding: 10px;
       width: 100%;
+    }
+  }
+}
+
+.perks {
+  @extend .clearfix;
+  li {
+    @extend .col-sm-6;
+    @extend .col-xs-12;
+    padding: 5px;
+    border-radius: 3px;
+    text-align: center;
+  }
+  span {
+    display: block;
+    padding: 10px;
+    border: 1px solid #ddd;
+    border-radius: 3px;
+  }
+}
+
+.pro-partners {
+  border-top: 1px dashed #ddd;
+  margin-top: 40px;
+  margin-bottom: 20px;
+  h1 {
+    margin: 30px 0;
+  }
+  li {
+    @extend .clearfix;
+    border: 1px solid #ddd;
+    padding: 15px;
+    border-radius: 3px;
+  }
+  .partner-logo {
+    float: left;
+    width: 20%;
+    height: 80px;
+    padding: 10px;
+    img {
+      width: 100%;
+      position: relative;
+      top: 5px;
+    }
+  }
+  .partner-deal {
+    width: 80%;
+    float: left;
+    text-align: left;
+    padding-left: 15px;
+    h4 {
+      margin-top: 0;
+    }
+    p {
+      margin-bottom: 0;
     }
   }
 }
