--- a/app/frontend/app/templates/story/comment.hbs
+++ b/app/frontend/app/templates/story/comment.hbs
@@ -12,6 +12,8 @@
           {{#unless selfPost}}
             <i class="fa fa-share reply-icon"></i>
             {{#link-to 'user' user}}{{unbound user.username}}{{/link-to}}
+          {{else}}
+            <a href="#"><span class="mini-badge">pro</span></a>
           {{/unless}}
         </h4>
         <p class="secondary">
