--- a/app/frontend/app/templates/user.hbs
+++ b/app/frontend/app/templates/user.hbs
@@ -40,7 +40,7 @@
               <h2 class="username">
                 {{username}}
                 {{#if user.isPro}}
-                  <a href="#"><span class="profile-badge">pro</span></a>
+                  {{#link-to 'pro'}}<span class="profile-badge">pro</span>{{/link-to}}
                 {{/if}}
               </h2>
               {{#if showEditMenu}}
