--- a/app/frontend/app/templates/header/avatar.hbs
+++ b/app/frontend/app/templates/header/avatar.hbs
@@ -8,7 +8,7 @@
     <li>
       {{#if currentUser.isPro}}
         {{#link-to 'pro'}}<i class="fa fa-thumbs-o-up"></i> Upgrade to PRO{{/link-to}}
-      {{#else}}
+      {{else}}
         {{#link-to 'pro'}}<i class="fa fa-thumbs-o-up"></i> View PRO{{/link-to}}
       {{/if}}
     </li>
