--- a/app/frontend/app/templates/pro.hbs
+++ b/app/frontend/app/templates/pro.hbs
@@ -1,15 +1,24 @@
 <div class="pro-card">
   <div class="panel panel-default">
     <div class="panel-body pro-panel">
-      <h1>Let's take our relationship to the next level.</h1>
-      <p><strong>Hummingbird PRO</strong> is our premium membership. It upgrades your account with some neat extras, you’ll receive special benefits from our PRO partners and most importantly you’ll be directly supporting us to continue making magic happen. We’re talking about love, baby.</p>
+      <!-- If subbed -->
+        <h1>You're PRO all day, every day.</h1>
+        <!-- If one-time -->
+        {{!-- <h1>You're PRO as it gets for 28 more days.</h1> --}}
+        <p>Thanks for giving us your greasy, dirty money. We promise to use it to buy solid gold chairs and evil, hairless cats. With the money that's left over, we'll be putting it back into Hummingbird so that we can build out features faster, afford more reliable servers and grow our community.</p>
+      {{!-- {{#if currentUser.isPro}}
 
-      <div class="purchase-block">
-        <div class="btn-group" role="group" aria-label="...">
-          <!-- Currently selected tab should have the class '.active' -->
-          <button type="button" {{bind-attr class=":btn :btn-default subscriptionActive:active"}} {{action "setCurrentTab" "subscription"}}>Subscription</button>
-          <button type="button" {{bind-attr class=":btn :btn-default onetimeActive:active"}} {{action "setCurrentTab" "onetime"}}>One-time / Gift</button>
-        </div>
+      {{else}}
+        <h1>Let's take our relationship to the next level.</h1>
+        <p><strong>Hummingbird PRO</strong> is our premium membership. It upgrades your account with some neat extras, you’ll receive special benefits from our PRO partners and most importantly you’ll be directly supporting us to continue making magic happen. We’re talking about love, baby.</p>
+
+        <div class="purchase-block">
+          <div class="btn-group" role="group" aria-label="...">
+            <!-- Currently selected tab should have the class '.active' -->
+            <button type="button" {{bind-attr class=":btn :btn-default subscriptionActive:active"}} {{action "setCurrentTab" "subscription"}}>Subscription</button>
+            <button type="button" {{bind-attr class=":btn :btn-default onetimeActive:active"}} {{action "setCurrentTab" "onetime"}}>One-time / Gift</button>
+          </div>
+      {{/if}} --}}
 
         <!-- Subscription option -->
         <!-- This form should only be shown if the 'Subscription' button above is clicked -->
